add inputs for name and beverage.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
   <title>Programming Language Selector</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Programming Language Selector</h1> 
+    <div id="hide-quiz">
+      <h4>What language should you learn? Fill out the quiz to find out!</h4>
+      <form id="quiz">
+        <div class= "form-group">
+          <label for="name">Please enter your name:</label>
+          <input id="name" type="text">
+        </div>
+        <div class= "form-group">
+          <label for="coffee">Please select a bevereage:</label>
+          <select id="beverage">
+          <option value="coffee">Coffee</option>
+          <option value="redbull">Red Bull</option>
+          <option value="beer">Beer</option>
+          <option value="wine">Wine</option>
+        </select>
+      </div>
+      </form>
+
 </body>
 </html>
