add animal input for first two celebs with coffee.

--- a/index.html
+++ b/index.html
@@ -126,19 +126,39 @@
       <p>John says...</p>
     </div>
 
+    <div id="racc">
+      <img id="coongif" class="img-fluid" src="img/coon.gif" alt="Gif of a raccoon eating cake.">
+      <p>"You're a party animal...</p>
+    </div>
+
+    <div id="bunn">
+      <img id="bungif" class="img-fluid" src="img/bun.gif" alt="Gif of a bunny in a cubicle.">
+      <p>"You're a book bunny...</p>
+    </div>
+
+    <div id="squir">
+      <img id="squirgif" class="img-fluid" src="img/squir.gif" alt="Gif of a squirrel eating nuts.">
+      <p>"You're as nutty as a squirrel...</p>
+    </div>
+
+    <div id="gorill">
+      <img id="gorgif" class="img-fluid" src="img/gorill.gif" alt="Gif of a gorilla eating boogers.">
+      <p>"You're a gross gorilla...</p>
+    </div>
+
     <div id="ruby">
       <img id="rubygif" class="img-fluid" src="img/ruby.gif" alt="Gif of a spinning ruby.">
-      <p>"You're a gem! Learn Ruby!"</p>
+      <p>and a gem of a human! Learn Ruby!"</p>
     </div>
 
     <div id="java">
       <img id="javagif" class="img-fluid" src="img/java.gif" alt="Gif of coffee being poured.">
-      <p>"Like coffee? Learn 'Java'Script!"</p>
+      <p>and you like coffee? Learn 'Java'Script!"</p>
     </div>
 
     <div id="python">
       <img id="pythongif" class="img-fluid" src="img/python.gif" alt="Gif of a snake nodding yes.">
-      <p>"You're a snake! Learn Python!"</p>
+      <p>and you're as slick as a snake! Learn Python!"</p>
     </div>
 
     <div id="reset">
