update wording on quiz reset button.

--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
     </div>
 
     <div id="reset">
-      <button id="reset-quiz" class="btn-dark">RESET QUIZ</button>
+      <button id="reset-quiz" class="btn-dark">SHOW QUIZ FORM</button>
     </div>
 
     <div id="invalid">
-      <p>PLEASE FILL IN ALL FIELDS!</p>
+      <p>PLEASE SELECT A CELEBRITY AND AN ANIMAL!</p>
     </div>
   </div>
 </body>
