incorporate name and number into results.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.6.0.js"></script>
@@ -21,7 +22,7 @@
         </div>
 
         <div class= "form-group">
-          <label for="number">Enter a number:</label>
+          <label for="number">How many things are on your to-do list?</label>
           <input id="number" type="text" required>
         </div>
         
@@ -107,6 +108,10 @@
       </form>
     </div>
 
+    <div id="text">
+      <p><span id="output"></span></p>
+    </div>
+
     <div id="snoop">
       <img id="snoopgif" class="img-fluid" src="img/snoop.gif" alt="Gif of Snoop dog dancing.">
       <p>Snoop says...</p>
@@ -163,12 +168,17 @@
     </div>
 
     <div id="reset">
-      <button id="reset-quiz" class="btn-dark">SHOW QUIZ FORM</button>
+      <button id="reset-quiz" type="button" class="btn-dark" onClick="window.location.reload();">SHOW QUIZ FORM</button>
+    </div>
+
+    <div id="text">
+      <h3><span id="output"></span></h3>
     </div>
 
     <div id="invalid">
       <p>PLEASE SELECT A CELEBRITY AND AN ANIMAL!</p>
     </div>
   </div>
+
 </body>
 </html>
