add color to results.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class= "form-group">
-          <label for="number">How many things are on your to-do list?</label>
+          <label for="number">How many items are on your to-do list?</label>
           <input id="number" type="text" required>
         </div>
         
